SSE, tests: enable a bunch of tests
- the task* tests work
- the alarm{1,2} tests work
- the alarm3 tests are not working properly

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -1,20 +1,20 @@
 autosar_includes = ['-I', meson.current_source_dir() / 'source' / 'os']
 
 autosar_apps = [
-  ['singlecore' / 'bcc1' / 'alarm1',    ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm1',    ['b', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm1',    ['c', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm1',    ['d', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm1',    ['e', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm1',    ['f', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm2',    ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm2',    ['b', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm2',    ['c', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm3',    ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm3',    ['b', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm3',    ['c', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm3',    ['d', 'system.json']],
-  ['singlecore' / 'bcc1' / 'alarm3',    ['e', 'system.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm1',    ['f', 'system.json', 'f.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm2',    ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm2',    ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm2',    ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm3',    ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm3',    ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm3',    ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm3',    ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'bcc1' / 'alarm3',    ['e', 'system.json', 'e.trace.json']],
   ['singlecore' / 'bcc1' / 'complex1',  ['a', 'system.json']],
   ['singlecore' / 'bcc1' / 'complex1',  ['b', 'system.json']],
   ['singlecore' / 'bcc1' / 'complex1',  ['c', 'system.json']],
@@ -53,9 +53,9 @@ autosar_apps = [
   ['singlecore' / 'bcc1' / 'task1',     ['e', 'system.json', 'e.trace.json']],
   ['singlecore' / 'bcc1' / 'task1',     ['f', 'system.json', 'f.trace.json']],
   ['singlecore' / 'bcc1' / 'task1',     ['g', 'system.json', 'g.trace.json']],
-  ['singlecore' / 'bcc1' / 'task2',     ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task2',     ['b', 'system.json']],
-  ['singlecore' / 'bcc1' / 'task2',     ['c', 'system.json']],
+  ['singlecore' / 'bcc1' / 'task2',     ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'task2',     ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'bcc1' / 'task2',     ['c', 'system.json', 'c.trace.json']],
   ['singlecore' / 'complex',            ['copter-without-alarms', 'system-without-alarms.json']],
   ['singlecore' / 'complex',            ['isorc', 'isorc.json']],
   ['singlecore' / 'ecc1' / 'bt1',       ['a', 'system.json']],
