AUTOSAR tests: add resource stubs

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -31,18 +31,18 @@ autosar_apps = [
   ['singlecore' / 'bcc1' / 'lukas',     ['alarmstress', 'alarmstress.json']],
   ['singlecore' / 'bcc1' / 'lukas',     ['dispatch', 'dispatch.json']],
   ['singlecore' / 'bcc1' / 'lukas',     ['isr2', 'isr2.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['b', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['c', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['d', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['e', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['f', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['g', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['h', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['j', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource1', ['k', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource2', ['a', 'system.json']],
-  ['singlecore' / 'bcc1' / 'resource2', ['b', 'system.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['f', 'system.json', 'f.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['g', 'system.json', 'g.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['h', 'system.json', 'h.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['j', 'system.json', 'j.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource1', ['k', 'system.json', 'k.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource2', ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'bcc1' / 'resource2', ['b', 'system.json', 'b.trace.json']],
   ['singlecore' / 'bcc1' / 'sse1',      ['a', 'system.json']],
   ['singlecore' / 'bcc1' / 'sse1',      ['b', 'system.json']],
   ['singlecore' / 'bcc1' / 'sse1',      ['c', 'system.json']],
