AUTOSAR: add a bunch of test cases

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -59,27 +59,27 @@ autosar_apps = [
   ['singlecore' / 'bcc1' / 'task2',     ['c', 'system.json', 'c.trace.json']],
   ['singlecore' / 'complex',            ['copter-without-alarms', 'system-without-alarms.json']],
   ['singlecore' / 'complex',            ['isorc', 'isorc.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['a', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['b', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['c', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['d', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['e', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['f', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['g', 'system.json']],
-  ['singlecore' / 'ecc1' / 'bt1',       ['h', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['a', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['b', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['c', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['d', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['e', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['f', 'system.json']],
-  ['singlecore' / 'ecc1' / 'event1',    ['g', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['a', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['b', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['c', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['d', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['e', 'system.json']],
-  ['singlecore' / 'ecc1' / 'eventisr1', ['f', 'system.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['f', 'system.json', 'f.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['g', 'system.json', 'g.trace.json']],
+  ['singlecore' / 'ecc1' / 'bt1',       ['h', 'system.json', 'h.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['f', 'system.json', 'f.trace.json']],
+  ['singlecore' / 'ecc1' / 'event1',    ['g', 'system.json', 'g.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['a', 'system.json', 'a.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['b', 'system.json', 'b.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['c', 'system.json', 'c.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['d', 'system.json', 'd.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['e', 'system.json', 'e.trace.json']],
+  ['singlecore' / 'ecc1' / 'eventisr1', ['f', 'system.json', 'f.trace.json']],
   ['multicore',                         ['minexample', 'minexample.json']],
 ]
 
