--- a/test/meson.build
+++ b/test/meson.build
@@ -65,13 +65,17 @@ if get_option('enable_step_tests')
         suite: 'steps'
     )
 
-    test('lock-elision',
-        py3_inst,
-        args: [files('lock_elision.py'), files('empty.json'), autosar_multicore_locks_a[0], autosar_multicore_locks_a[1]],
-        env: [python_path],
-        depends: ara_py,
-        suite: ['steps', 'sse']
-    )
+    foreach elem : [autosar_multicore_locks_a,
+                    autosar_multicore_locks_b,
+                    autosar_multicore_locks_c]
+        test('lock_elision_' + elem[2],
+            py3_inst,
+            args: [files('lock_elision.py'), files('empty.json'), elem[0], elem[1]],
+            env: [python_path],
+            depends: ara_py,
+            suite: ['steps', 'lock_elision']
+        )
+    endforeach
 
     test('multiple-configured-steps',
         py3_inst,
