--- a/meson.build
+++ b/meson.build
@@ -149,6 +149,7 @@ if get_option('enable_toplevel_tests')
        args: [ara_py, autosar_multicore_timing_a[0],
               '--log-level', 'warn', '--runtime-stats', '--runtime-stats-file', 'dump', '--runtime-stats-format', 'json',
               '--oilfile', autosar_multicore_timing_a[1],
+              '--timings', autosar_multicore_timing_a[3],
               '--step-settings', extra_settings,
               '--manual-corrections', instance_corrections],
        suite: 'toplevel'
