AUTOSAR: add a second timing application

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -114,7 +114,8 @@ foreach app : autosar_apps
 endforeach
 
 autosar_apps_with_timing = [
-  ['multicore' / 'timing',              ['a', 'system.json', 'a_timing.json']],
+  ['multicore' / 'timing',              ['a', 'system_a.json', 'a_timing.json']],
+  ['multicore' / 'timing',              ['b', 'system_b.json', 'b_timing.json']],
 ]
 
 autosar_targets_with_timings = []
