--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -86,6 +86,7 @@ autosar_apps = [
   ['multicore' / 'locks',               ['c', 'system.json']],
   ['multicore' / 'locks',               ['d', 'system.json']],
   ['multicore' / 'locks',               ['e', 'system.json']],
+  ['multicore' / 'loops',               ['a', 'system_a.json']],
 ]
 
 autosar_targets = []
