--- a/test/meson.build
+++ b/test/meson.build
@@ -65,18 +65,29 @@ if get_option('enable_step_tests')
         suite: 'steps'
     )
 
-    foreach elem : [[autosar_multicore_locks_a, files('locks_a.json')],
-                    [autosar_multicore_locks_b, files('locks_b.json')],
-                    [autosar_multicore_locks_c, files('locks_c.json')],
-                    [autosar_multicore_locks_d, files('locks_d.json')],
-                    [autosar_multicore_locks_e, files('locks_e.json')]]
-        test('lock_elision_' + app['full_name'],
-            py3_inst,
-            args: [files('lock_elision.py'), elem[1], elem[0]['ll'], elem[0]['oil']],
-            env: [python_path],
-            depends: ara_py,
-            suite: ['steps', 'lock_elision']
-        )
+
+    lock_files = {
+                   'autosar_multicore_locks_a': files('locks_a.json'),
+                   'autosar_multicore_locks_b': files('locks_b.json'),
+                   'autosar_multicore_locks_c': files('locks_c.json'),
+                   'autosar_multicore_locks_d': files('locks_d.json'),
+                   'autosar_multicore_locks_e': files('locks_e.json'),
+                 }
+    foreach app: autosar_targets
+      if app['full_name'] in lock_files
+           locks = lock_files[app['full_name']]
+      elif app.has_key('locks')
+             locks = app['locks']
+      else
+        continue
+      endif
+      test('lock_elision_' + app['full_name'],
+          py3_inst,
+          args: [files('lock_elision.py'), locks, app['ll'], app['oil']],
+          env: [python_path],
+          depends: ara_py,
+          suite: ['steps', 'lock_elision']
+      )
     endforeach
 
     test('multiple-configured-steps',
