AUTOSAR: more multicore spinlock examples

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -87,6 +87,12 @@ autosar_apps = [
   {'core': 'multicore',  'path': 'locks',              'name': 'd',                     'oil': 'system.json'},
   {'core': 'multicore',  'path': 'locks',              'name': 'e',                     'oil': 'system.json'},
   {'core': 'multicore',  'path': 'locks',              'name': 'f',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'g',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'h',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'i',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'j',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'k',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks',              'name': 'l',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
   {'core': 'multicore',  'path': 'loops',              'name': 'a',                     'oil': 'system_a.json'},
   {'core': 'multicore',  'path': 'loops',              'name': 'b',                     'oil': 'system_b.json'},
   {'core': 'multicore',  'path': 'loops',              'name': 'c',                     'oil': 'system_b.json'},
