ara_tester: adjust

--- a/meson.build
+++ b/meson.build
@@ -155,6 +155,8 @@ subdir('test')
 if get_option('enable_toplevel_tests')
     settings = 'test' / 'settings'
     app = autosar_singlecore_bcc1_task1_a
+    extra_settings = files('test' / 'extra_settings.json')
+    app = autosar_multicore_locks_m
     test('ara_tester',
        py3_inst,
        args: [ara_py, app['ll'],
