AUTOSAR: more testcases for 3 and 6 cores

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -81,20 +81,34 @@ autosar_apps = [
   {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'e',                     'oil': 'system.json', 'trace': 'e.trace.json'},
   {'core': 'singlecore', 'path': 'ecc1' / 'eventisr1', 'name': 'f',                     'oil': 'system.json', 'trace': 'f.trace.json'},
   {'core': 'multicore',  'path': '',                   'name': 'minexample',            'oil': 'minexample.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'a',                     'oil': 'system.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'b',                     'oil': 'system.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'c',                     'oil': 'system.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'd',                     'oil': 'system.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'e',                     'oil': 'system.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'f',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'g',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'h',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'i',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'j',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'k',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'l',                     'oil': 'EXTRACT', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'm',                     'oil': 'system_m.json'},
-  {'core': 'multicore',  'path': 'locks',              'name': 'n',                     'oil': 'system_m.json'},
+  {'core': 'multicore',  'path': 'locks', / '2cores',  'name': 'a',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '2cores',  'name': 'b',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '2cores',  'name': 'c',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '2cores',  'name': 'd',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '2cores',  'name': 'e',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'a',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'b',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'c',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'd',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'e',                     'oil': 'system.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'f',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'g',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'h',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'i',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'j',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'k',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'l',                     'oil': 'system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'm',                     'oil': 'system_m.json'},
+  {'core': 'multicore',  'path': 'locks', / '3cores',  'name': 'n',                     'oil': 'system_m.json'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'identity-a.cc',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'identity-b.cc',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'identity-c.cc',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'identity-d.cc',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'identity-e.cc',         'oil': 'identity-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'triple-a.cc',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'triple-b.cc',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'triple-c.cc',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
+  {'core': 'multicore',  'path': 'locks', / '6cores',  'name': 'triple-d.cc',           'oil': 'triple-system.json', 'trace': 'EXTRACT', 'locks': 'EXTRACT'},
   {'core': 'multicore',  'path': 'loops',              'name': 'a',                     'oil': 'system_a.json'},
   {'core': 'multicore',  'path': 'loops',              'name': 'b',                     'oil': 'system_b.json'},
   {'core': 'multicore',  'path': 'loops',              'name': 'c',                     'oil': 'system_b.json'},
