--- a/test/meson.build
+++ b/test/meson.build
@@ -147,3 +147,7 @@ if get_option('enable_step_tests')
 
     subdir('native_step_test')
 endif
+
+if get_option('enable_zephyr_tests')
+    subdir('zephyr_test')
+endif
