Zephyr: Added zephyr_blinky test case

--- a/test/zephyr_test/meson.build
+++ b/test/zephyr_test/meson.build
@@ -1,6 +1,13 @@
 
 graphs = meson.current_source_dir() / 'graphs'
 
+test('zephyr_blinky',
+        py3_inst,
+        args: [files('../instance_graph.py'), graphs / 'zephyr_blinky.json', zephyr_blinky, 'ZEPHYR'],
+        env: [python_path],
+        suite: 'zephyr'
+)
+
 test('zephyr_static_threads',
         py3_inst,
         args: [files('../instance_graph.py'), graphs / 'static_threads.json', zephyr_static_threads, 'ZEPHYR'],
